// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders snapshot 1`] = `
<div
  class="sc-fubCfw flyRzm"
>
  <h1
    class="sc-pFZIQ dHmddL"
  >
    My Hacker Stories.
  </h1>
  <form
    class="sc-hKgILt cdXMqi"
  >
    <label
      class="sc-gsTCUz gOPsll"
      for="search"
    >
      <strong>
        Search:
      </strong>
    </label>
     
    <input
      class="sc-dlfnbm bkWGVZ"
      data-testid="submit"
      id="search"
      type="text"
      value="JavaScript"
    />
    <button
      class="sc-bdfBwQ sc-eCssSg kQtNhM fTEYT"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-search fa-w-16 fa-1x "
        data-icon="search"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
        />
      </svg>
    </button>
  </form>
  <p>
    <strong>
      Search Results:
    </strong>
  </p>
  <div
    class="sc-gKsewC hHvazR"
  >
    <span
      class="sc-iBPRYJ geCVjj"
      width="40%"
    >
      <a
        href="https://reactjs.org/"
      >
        React
      </a>
    </span>
    <span
      class="sc-iBPRYJ geBiBU"
      width="30%"
    >
      Jordan Walke
    </span>
    <span
      class="sc-iBPRYJ geBHCO"
      width="10%"
    >
      3
    </span>
    <span
      class="sc-iBPRYJ geBHCO"
      width="10%"
    >
      4
    </span>
    <span
      class="sc-iBPRYJ geBHCO"
      width="10%"
    >
      <button
        class="sc-bdfBwQ sc-jSgupP kQtNhM fqYsgG"
        data-testid="dismiss-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check-square fa-w-14 fa-1x "
          data-icon="check-square"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 480H48c-26.51 0-48-21.49-48-48V80c0-26.51 21.49-48 48-48h352c26.51 0 48 21.49 48 48v352c0 26.51-21.49 48-48 48zm-204.686-98.059l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.248-16.379-6.249-22.628 0L184 302.745l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.25 16.379 6.25 22.628.001z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
  </div>
  <div
    class="sc-gKsewC hHvazR"
  >
    <span
      class="sc-iBPRYJ geCVjj"
      width="40%"
    >
      <a
        href="https://redux.js.org/"
      >
        Redux
      </a>
    </span>
    <span
      class="sc-iBPRYJ geBiBU"
      width="30%"
    >
      Dan Abramov, Andrew Clark
    </span>
    <span
      class="sc-iBPRYJ geBHCO"
      width="10%"
    >
      2
    </span>
    <span
      class="sc-iBPRYJ geBHCO"
      width="10%"
    >
      5
    </span>
    <span
      class="sc-iBPRYJ geBHCO"
      width="10%"
    >
      <button
        class="sc-bdfBwQ sc-jSgupP kQtNhM fqYsgG"
        data-testid="dismiss-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check-square fa-w-14 fa-1x "
          data-icon="check-square"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 480H48c-26.51 0-48-21.49-48-48V80c0-26.51 21.49-48 48-48h352c26.51 0 48 21.49 48 48v352c0 26.51-21.49 48-48 48zm-204.686-98.059l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.248-16.379-6.249-22.628 0L184 302.745l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.25 16.379 6.25 22.628.001z"
            fill="currentColor"
          />
        </svg>
      </button>
    </span>
  </div>
  ;
</div>
`;

exports[`Item renders snapshot 1`] = `
<div
  class="sc-gKsewC hHvazR"
>
  <span
    class="sc-iBPRYJ geCVjj"
    width="40%"
  >
    <a
      href="https://reactjs.org/"
    >
      React
    </a>
  </span>
  <span
    class="sc-iBPRYJ geBiBU"
    width="30%"
  >
    Jordan Walke
  </span>
  <span
    class="sc-iBPRYJ geBHCO"
    width="10%"
  >
    3
  </span>
  <span
    class="sc-iBPRYJ geBHCO"
    width="10%"
  >
    4
  </span>
  <span
    class="sc-iBPRYJ geBHCO"
    width="10%"
  >
    <button
      class="sc-bdfBwQ sc-jSgupP kQtNhM fqYsgG"
      data-testid="dismiss-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-check-square fa-w-14 fa-1x "
        data-icon="check-square"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 480H48c-26.51 0-48-21.49-48-48V80c0-26.51 21.49-48 48-48h352c26.51 0 48 21.49 48 48v352c0 26.51-21.49 48-48 48zm-204.686-98.059l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.248-16.379-6.249-22.628 0L184 302.745l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.25 16.379 6.25 22.628.001z"
          fill="currentColor"
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`SearchForm renders snapshot 1`] = `
<form
  class="sc-hKgILt cdXMqi"
>
  <label
    class="sc-gsTCUz gOPsll"
    for="search"
  >
    <strong>
      Search:
    </strong>
  </label>
   
  <input
    class="sc-dlfnbm bkWGVZ"
    data-testid="submit"
    id="search"
    type="text"
    value="React"
  />
  <button
    class="sc-bdfBwQ sc-eCssSg kQtNhM fTEYT"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-search fa-w-16 fa-1x "
      data-icon="search"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
      />
    </svg>
  </button>
</form>
`;
